// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input passes props correctly 1`] = `
<input
  className="lui-input my-class"
  data-x="x"
  onClick={[MockFunction]}
  title="Title"
  value="Value"
/>
`;

exports[`Input with modifiers renders correctly 1`] = `
<input
  className="lui-input lui-input--inverse"
  value="Value"
/>
`;

exports[`Input with states renders correctly 1`] = `
<input
  className="lui-input lui-invalid"
  disabled={true}
  value="Value"
/>
`;

exports[`Normal input renders correctly 1`] = `
<input
  className="lui-input"
  value="Value"
/>
`;
